ttest/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ejareii-ns
  labels:
    name: ejareii-ns
