ttest/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  namespace: ejareii-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: ejareii/front
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 3000


---
apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: ejareii-ns
spec:
  type: NodePort
  selector:
    app: front
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30101
