ttest/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: ejareii-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: ejareii/server
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 9000


---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: ejareii-ns
spec:
  selector:
    app: server
  ports:
  - port: 9000
    targetPort: 9000
