ttest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  namespace: ejareii-ns
  # annotations:
  #   traefik.ingress.kubernetes.io/router.entrypoints: web
  #   traefik.ingress.kubernetes.io/router.middlewares: "redirect-to-https@file"
  #   traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: moeinjjj.com  # Replace with your actual domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-service
            port:
              number: 3000
